# ml_cohort_2

./: README.md
docker-compose/: docker-compose.yml  redpanda.yml
services/trade_producer/: Makefile  README.md  pyproject.toml
services/trade_producer/src/: karken_websocket_api.py  main.py
